# dscl

./: LICENSE  README.md  pyproject.toml  test_dscl_local.py
dictionary/context/: domain_register.json  register_tags.json  rules.json
dictionary/grammar/: modifier_rules.json  nominalization_blocklist.json  verb_placement.json  voice_rules.json
dictionary/meta/: conflict_resolution.json  weight_definitions.json
dictionary/readability/: grade_targets.json  sentence_length.json  syllable_load.json
dictionary/syntax/: clause_rules.json  paragraph_structure.json  punctuation_function.json  sentence_structure.json
dictionary/system/: HOW_TO_USE.md  defaults.json  entry_rules.json  pipeline.json  scope.json
dictionary/vocabulary/: domain_exceptions.json  domain_vocab.json  fallback_vocab.json  primary_vocab.json  templates.json
dictionary/vocabulary/sources/: google_crossref_report.txt
dscl/: __init__.py  cli.py  core.py  detector.py  loader.py  models.py  validator.py
tests/: __init__.py  test_core.py
